--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-header">
-                    <img src="/img/pic1.jpg" alt="Image">
+                    <img src="img/pic1.jpg" alt="Image">
                 </div>
                 <div class="sidebar-content">
                     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -81,8 +81,8 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="/Resume Ajai Sankar Hareesh (1).pdf"><i class="fa fa-download"></i>Resume</a>
-                        <a class="btn" href="/signup.html"><i class="fa fa-hands-helping"></i>Sign Up</a>
+                        <a class="btn" href="Resume Ajai Sankar Hareesh (1).pdf"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="signup.html"><i class="fa fa-hands-helping"></i>Sign Up</a>
                     </div>
                 </div>
                 <!-- Large Button End -->
@@ -280,8 +280,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-des">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic2.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic2.jpg" data-lightbox="portfolio" data-title="Football" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic2.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic2.jpg" data-lightbox="portfolio" data-title="Football" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
     
                                         <a class="portfolio-title" href="#">Football Time<span>Friends</span></a>
                                     </figure>
@@ -291,8 +291,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-des">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic3.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic3.jpg" class="link-preview" data-lightbox="portfolio" data-title="CSI" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic3.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic3.jpg" class="link-preview" data-lightbox="portfolio" data-title="CSI" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a class="portfolio-title" href="#">Execom Poster<span>CSI SJCET</span></a>
                                     </figure>
                                 </div>
@@ -301,8 +301,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic4.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Friends" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic4.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Friends" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a class="portfolio-title" href="#">Fun time<span>Friends</span></a>
                                     </figure>
                                 </div>
@@ -311,8 +311,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic5.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Friends" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic5.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Friends" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a class="portfolio-title" href="#">Robo People<span>Friends</span></a>
                                     </figure>
                                 </div>
@@ -321,8 +321,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic6.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Family" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic6.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Family" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a class="portfolio-title" href="#">Family time<span></span></a>
                                     </figure>
                                 </div>
@@ -331,8 +331,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="/img/pic7.jpg" class="img-fluid" alt="">
-                                        <a href="/img/pic7.jpg" class="link-preview" data-lightbox="portfolio" data-title="UST Global" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/pic7.jpg" class="img-fluid" alt="">
+                                        <a href="img/pic7.jpg" class="link-preview" data-lightbox="portfolio" data-title="UST Global" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a class="portfolio-title" href="#">UST Global<span>SJCET PAlai</span></a>
                                     </figure>
                                 </div>
